force-app/main/default/objects/Onboarding_Process__c/Onboarding_Process__c.object-meta.xml
<CustomObject>
    <description>This Object is meant to manage the Onboarding dedicated process.</description>
    <label>Onboarding Process</label>
    <nameField>
        <displayFormat>OP-{0000000000}</displayFormat>
        <label>Onboarding Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Processes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>