force-app/main/default/objects/Onboarding_Process__c/fields/Abandonned__c.field-meta.xml
<CustomField>
    <fullName>Abandonned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked by Process builder if the merchant is changed to &quot;not relevant&quot; ou &quot;future partnership&quot;</description>
    <label>Abandonned</label>
    <type>Checkbox</type>
</CustomField>