force-app/main/default/objects/Onboarding_Process__c/fields/Addresses__c.field-meta.xml
<CustomField>
    <fullName>Addresses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Addresses</label>
    <type>Checkbox</type>
</CustomField>