force-app/main/default/objects/Onboarding_Process__c/fields/Ads_Comment__c.field-meta.xml
<CustomField>
    <fullName>Ads_Comment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ads Comment</label>
    <type>Checkbox</type>
</CustomField>