force-app/main/default/objects/Onboarding_Process__c/fields/Articles_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>Articles_of_Incorporation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Articles of Incorporation</label>
    <type>Checkbox</type>
</CustomField>