force-app/main/default/objects/Onboarding_Process__c/fields/Articles_of_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Articles_of_Organisation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Articles of Organisation</label>
    <type>Checkbox</type>
</CustomField>