force-app/main/default/objects/Onboarding_Process__c/fields/AydonProfile__c.field-meta.xml
<CustomField>
    <fullName>AydonProfile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aydon profile set-up</label>
    <type>Checkbox</type>
</CustomField>