force-app/main/default/objects/Onboarding_Process__c/fields/Back_Market_and_Onboarding_Process_info__c.field-meta.xml
<CustomField>
    <fullName>Back_Market_and_Onboarding_Process_info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Back Market and Onboarding Process info</label>
    <type>Checkbox</type>
</CustomField>