force-app/main/default/objects/Onboarding_Process__c/fields/Back_Office_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Back_Office_Configuration__c</fullName>
    <formula>Merchant__r.Back_Office_Configuration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Back-Office Configuration</label>
    <type>Checkbox</type>
</CustomField>