force-app/main/default/objects/Onboarding_Process__c/fields/Back_Office_P_K__c.field-meta.xml
<CustomField>
    <fullName>Back_Office_P_K__c</fullName>
    <formula>Merchant__r.Back_Office_PK__c</formula>
    <label>Back-Office P.K.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>