force-app/main/default/objects/Onboarding_Process__c/fields/Backcare__c.field-meta.xml
<CustomField>
    <fullName>Backcare__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>You need to select at least one situation (Backcare or Customer Service)</inlineHelpText>
    <label>Backcare</label>
    <type>Checkbox</type>
</CustomField>