force-app/main/default/objects/Onboarding_Process__c/fields/BackShip_start_date__c.field-meta.xml
<CustomField>
    <fullName>BackShip_start_date__c</fullName>
    <label>BackShip start date</label>
    <type>Date</type>
</CustomField>