force-app/main/default/objects/Onboarding_Process__c/fields/BIC__c.field-meta.xml
<CustomField>
    <fullName>BIC__c</fullName>
    <formula>Merchant__r.BIC__c</formula>
    <inlineHelpText>Info coming from the merchant record</inlineHelpText>
    <label>BIC</label>
    <type>Text</type>
</CustomField>