force-app/main/default/objects/Onboarding_Process__c/fields/Billing__c.field-meta.xml
<CustomField>
    <fullName>Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing</label>
    <type>Checkbox</type>
</CustomField>