force-app/main/default/objects/Onboarding_Process__c/fields/BizDev__c.field-meta.xml
<CustomField>
    <fullName>BizDev__c</fullName>
    <formula>Merchant__r.BizDev__r.FirstName + &apos; &apos; + Merchant__r.BizDev__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BizDev</label>
    <type>Text</type>
</CustomField>