force-app/main/default/objects/Onboarding_Process__c/fields/Blacklist_check__c.field-meta.xml
<CustomField>
    <fullName>Blacklist_check__c</fullName>
    <label>Blacklist check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Validated by finance</fullName>
            </value>
            <value>
                <fullName>Blocked by finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>