force-app/main/default/objects/Onboarding_Process__c/fields/BO_presentation__c.field-meta.xml
<CustomField>
    <fullName>BO_presentation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>B.O. presentation</label>
    <type>Checkbox</type>
</CustomField>