force-app/main/default/objects/Onboarding_Process__c/fields/Buyback_Ads_ready__c.field-meta.xml
<CustomField>
    <fullName>Buyback_Ads_ready__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buyback Ads ready</label>
    <type>Checkbox</type>
</CustomField>