force-app/main/default/objects/Onboarding_Process__c/fields/Buyback_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Buyback_Eligibility__c</fullName>
    <formula>if( ISPICKVAL(Merchant__r.Country__c ,&quot;France&quot;), &apos;True&apos;,
if( ISPICKVAL(Merchant__r.Country__c ,&quot;Italy&quot;), &apos;True&apos;,
if( ISPICKVAL(Merchant__r.Country__c ,&quot;Germany&quot;), &apos;True&apos;,
if( ISPICKVAL(Merchant__r.Country__c ,&quot;Austria&quot;), &apos;True&apos;,
if( ISPICKVAL(Merchant__r.Country__c ,&quot;Netherlands&quot;), &apos;True&apos;,
if( ISPICKVAL(Merchant__r.Country__c ,&quot;Belgium&quot;), &apos;True&apos;,
if( ISPICKVAL(Merchant__r.Country__c ,&quot;Poland&quot;), &apos;True&apos;,&apos;False&apos;)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyback Eligibility</label>
    <type>Text</type>
</CustomField>