force-app/main/default/objects/Onboarding_Process__c/fields/CB_in_Adyen__c.field-meta.xml
<CustomField>
    <fullName>CB_in_Adyen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Card in Adyen</label>
    <type>Checkbox</type>
</CustomField>