force-app/main/default/objects/Onboarding_Process__c/fields/CC_List__c.field-meta.xml
<CustomField>
    <fullName>CC_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CC_List</label>
    <referenceTo>Targeted_Country__c</referenceTo>
    <relationshipLabel>User</relationshipLabel>
    <relationshipName>User</relationshipName>
    <type>Lookup</type>
</CustomField>