force-app/main/default/objects/Onboarding_Process__c/fields/Certificate_expiration_date__c.field-meta.xml
<CustomField>
    <fullName>Certificate_expiration_date__c</fullName>
    <formula>Merchant__r.Certificate_expiration_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certificate expiration date</label>
    <type>Date</type>
</CustomField>