force-app/main/default/objects/Onboarding_Process__c/fields/CreatedByUser__c.field-meta.xml
<CustomField>
    <fullName>CreatedByUser__c</fullName>
    <formula>IF(CreatedById = $User.Id , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreatedByUser</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>