force-app/main/default/objects/Onboarding_Process__c/fields/CurrentBizDev__c.field-meta.xml
<CustomField>
    <fullName>CurrentBizDev__c</fullName>
    <formula>IF(  Merchant__r.BizDev__c  = $User.Id , &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CurrentBizDev</label>
    <type>Text</type>
</CustomField>