force-app/main/default/objects/Onboarding_Process__c/fields/Customer_Service__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>You need to select at least one situation (Backcare or Customer Service)</inlineHelpText>
    <label>Customer Service</label>
    <type>Checkbox</type>
</CustomField>