force-app/main/default/objects/Onboarding_Process__c/fields/Date_Buyback_Quality_Test_2__c.field-meta.xml
<CustomField>
    <fullName>Date_Buyback_Quality_Test_2__c</fullName>
    <formula>Merchant__r.Date_Buyback_Quality_Test_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date - Buyback Quality Test #2</label>
    <type>Date</type>
</CustomField>