force-app/main/default/objects/Onboarding_Process__c/fields/Date_entry_in_abandonned__c.field-meta.xml
<CustomField>
    <fullName>Date_entry_in_abandonned__c</fullName>
    <label>Date entry in abandonned</label>
    <type>Date</type>
</CustomField>