force-app/main/default/objects/Onboarding_Process__c/fields/Date_entry_in_Saved__c.field-meta.xml
<CustomField>
    <fullName>Date_entry_in_Saved__c</fullName>
    <label>Date entry in Saved</label>
    <type>Date</type>
</CustomField>