force-app/main/default/objects/Onboarding_Process__c/fields/Date_entry_in_stage_GoLive_Prerequisites__c.field-meta.xml
<CustomField>
    <fullName>Date_entry_in_stage_GoLive_Prerequisites__c</fullName>
    <label>Date entry in stage GoLive Prerequisites</label>
    <type>DateTime</type>
</CustomField>