force-app/main/default/objects/Onboarding_Process__c/fields/Date_entry_in_stage_NMO__c.field-meta.xml
<CustomField>
    <fullName>Date_entry_in_stage_NMO__c</fullName>
    <formula>Merchant__r.Date_entry_in_stage_NMO__c</formula>
    <label>Date entry in stage N.M.O</label>
    <type>Date</type>
</CustomField>