force-app/main/default/objects/Onboarding_Process__c/fields/Date_Financial_and_Legal_Completion__c.field-meta.xml
<CustomField>
    <fullName>Date_Financial_and_Legal_Completion__c</fullName>
    <label>Date - Financial and Legal - Completion</label>
    <type>Date</type>
</CustomField>