force-app/main/default/objects/Onboarding_Process__c/fields/Date_Global_completion_rate__c.field-meta.xml
<CustomField>
    <fullName>Date_Global_completion_rate__c</fullName>
    <label>Date - Global completion rate</label>
    <type>Date</type>
</CustomField>