force-app/main/default/objects/Onboarding_Process__c/fields/Date_Go_Live_and_Supply_Completion_r__c.field-meta.xml
<CustomField>
    <fullName>Date_Go_Live_and_Supply_Completion_r__c</fullName>
    <label>Date - Go-Live and Supply - Completion r</label>
    <type>Date</type>
</CustomField>