force-app/main/default/objects/Onboarding_Process__c/fields/Date_KYCs_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_KYCs_Approved__c</fullName>
    <description>Filled by workflow</description>
    <label>Date KYCs Approved</label>
    <type>DateTime</type>
</CustomField>