force-app/main/default/objects/Onboarding_Process__c/fields/Date_Quality_Completion_rate__c.field-meta.xml
<CustomField>
    <fullName>Date_Quality_Completion_rate__c</fullName>
    <label>Date - Quality - Completion rate</label>
    <type>Date</type>
</CustomField>