force-app/main/default/objects/Onboarding_Process__c/fields/Date_Quality_Survey_Answered__c.field-meta.xml
<CustomField>
    <fullName>Date_Quality_Survey_Answered__c</fullName>
    <label>Date Quality Survey Answered</label>
    <type>DateTime</type>
</CustomField>