force-app/main/default/objects/Onboarding_Process__c/fields/Date_Quality_Survey_Validated__c.field-meta.xml
<CustomField>
    <fullName>Date_Quality_Survey_Validated__c</fullName>
    <label>Date Quality Survey Validated</label>
    <type>DateTime</type>
</CustomField>