force-app/main/default/objects/Onboarding_Process__c/fields/Date_Quality_Test__c.field-meta.xml
<CustomField>
    <fullName>Date_Quality_Test__c</fullName>
    <inlineHelpText>Populated automatically when the merchant is answering the test</inlineHelpText>
    <label>Date - Quality Test</label>
    <type>Date</type>
</CustomField>