force-app/main/default/objects/Onboarding_Process__c/fields/Delay_Business_Quality_Prerequisites__c.field-meta.xml
<CustomField>
    <fullName>Delay_Business_Quality_Prerequisites__c</fullName>
    <description>Delay between Business &amp; Quality Prerequisites and Go-live Prerequisites.</description>
    <formula>Date_entry_in_stage_GoLive_Prerequisites__c - Date_entry_in_stage_BQ_Prerequisites__c</formula>
    <inlineHelpText>Delay between Business &amp; Quality Prerequisites and Go-live Prerequisites.</inlineHelpText>
    <label>Delay Business Quality Prerequisites</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>