force-app/main/default/objects/Onboarding_Process__c/fields/Delay_Go_live_Prerequisites__c.field-meta.xml
<CustomField>
    <fullName>Delay_Go_live_Prerequisites__c</fullName>
    <description>Delay between Go-live Prerequisites and entry in N.M.O.</description>
    <formula>Date_entry_in_stage_NMO__c - DATEVALUE( Date_entry_in_stage_GoLive_Prerequisites__c )</formula>
    <inlineHelpText>Delay between Go-live Prerequisites and entry in N.M.O.</inlineHelpText>
    <label>Delay Go-live Prerequisites</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>