force-app/main/default/objects/Onboarding_Process__c/fields/Delay_KYC_Approval__c.field-meta.xml
<CustomField>
    <fullName>Delay_KYC_Approval__c</fullName>
    <formula>Date_KYCs_Approved__c - Date_KYCs_Checked__c</formula>
    <label>Delay KYC Approval</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>