force-app/main/default/objects/Onboarding_Process__c/fields/Delay_Quality_Survey_Validation__c.field-meta.xml
<CustomField>
    <fullName>Delay_Quality_Survey_Validation__c</fullName>
    <formula>Date_Quality_Survey_Validated__c - Date_Quality_Survey_Answered__c</formula>
    <label>Delay Quality Survey Validation</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>