force-app/main/default/objects/Onboarding_Process__c/fields/Explanation_1__c.field-meta.xml
<CustomField>
    <fullName>Explanation_1__c</fullName>
    <defaultValue>(&apos;Approve = &quot;Quality Prerequisites&quot; / Reject = Stay in &quot;Business prerequisites&quot;&apos;)</defaultValue>
    <label>From Business to Quality Prerequisites</label>
    <type>TextArea</type>
</CustomField>