force-app/main/default/objects/Onboarding_Process__c/fields/Explanation_2__c.field-meta.xml
<CustomField>
    <fullName>Explanation_2__c</fullName>
    <defaultValue>(&apos;Approve = &quot;Go-live Prerequisites&quot; / Reject = Stay in &quot;Quality prerequisites&quot;&apos;)</defaultValue>
    <label>From Quality to Go Live prerequisites</label>
    <type>TextArea</type>
</CustomField>