force-app/main/default/objects/Onboarding_Process__c/fields/Explanation_3__c.field-meta.xml
<CustomField>
    <fullName>Explanation_3__c</fullName>
    <defaultValue>(&apos;Approve = Go Live - NMO &quot;Phase 1&quot; / Reject = Stay in &quot;Go-live prerequisites&quot;&apos;)</defaultValue>
    <label>From Go Live prerequisites to NMO</label>
    <type>TextArea</type>
</CustomField>