force-app/main/default/objects/Onboarding_Process__c/fields/Fatness__c.field-meta.xml
<CustomField>
    <fullName>Fatness__c</fullName>
    <formula>Merchant__r.Fatness__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fatness</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>