force-app/main/default/objects/Onboarding_Process__c/fields/FBBM__c.field-meta.xml
<CustomField>
    <fullName>FBBM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>You need to select at least one situation (F.B.B.M. or Logistic)</description>
    <inlineHelpText>You need to select at least one situation (F.B.B.M. or Transport/Delivery)</inlineHelpText>
    <label>F.B.B.M.</label>
    <type>Checkbox</type>
</CustomField>