force-app/main/default/objects/Onboarding_Process__c/fields/Global_completion_rate__c.field-meta.xml
<CustomField>
    <fullName>Global_completion_rate__c</fullName>
    <formula>(( Financial_and_Legal_Completion_rate__c +  Go_Live_and_Supply_Completion_rate__c +  Quality_Completion_rate__c )/3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Global completion rate</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>