force-app/main/default/objects/Onboarding_Process__c/fields/Go_Live_and_Supply_Completion_rate__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_and_Supply_Completion_rate__c</fullName>
    <formula>if(TC__c=true, 16.67,0) +
if(Listings_and_of_units__c=true, 16.67,0) +
if(Payment_methods__c=true, 16.67,0) +
if(Addresses__c=true, 16.67,0) +
if(Back_Office_Configuration__c=true, 16.67,0) +
if(Shipping_methods__c=true, 16.67,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Go-Live and Supply - Completion rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>