force-app/main/default/objects/Onboarding_Process__c/fields/Go_Live_granted__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_granted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Useful for the Merchant Stage Process to allow its Stage to be updated from Onboarding to N.M.O..</description>
    <label>Go-Live granted</label>
    <type>Checkbox</type>
</CustomField>