force-app/main/default/objects/Onboarding_Process__c/fields/Has_Begun_On__c.field-meta.xml
<CustomField>
    <fullName>Has_Begun_On__c</fullName>
    <formula>if(not(ISBLANK( Has_begun_on_import__c ) ),Has_begun_on_import__c,DATEVALUE ( CreatedDate ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date de début</inlineHelpText>
    <label>Has Begun On</label>
    <type>Date</type>
</CustomField>