force-app/main/default/objects/Onboarding_Process__c/fields/Has_Merchant_Ready_Targeted_Countries__c.field-meta.xml
<CustomField>
    <fullName>Has_Merchant_Ready_Targeted_Countries__c</fullName>
    <formula>Merchant__r.Ready_Targeted_Countries__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Merchant Ready Targeted Countries</label>
    <type>Checkbox</type>
</CustomField>