force-app/main/default/objects/Onboarding_Process__c/fields/IBAN__c.field-meta.xml
<CustomField>
    <fullName>IBAN__c</fullName>
    <formula>Merchant__r.IBAN__c</formula>
    <inlineHelpText>Info coming from the merchant record</inlineHelpText>
    <label>IBAN</label>
    <type>Text</type>
</CustomField>