force-app/main/default/objects/Onboarding_Process__c/fields/IBAN_checked__c.field-meta.xml
<CustomField>
    <fullName>IBAN_checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I.B.A.N. Approved</label>
    <type>Checkbox</type>
</CustomField>