force-app/main/default/objects/Onboarding_Process__c/fields/IBAN_uploaded__c.field-meta.xml
<CustomField>
    <fullName>IBAN_uploaded__c</fullName>
    <formula>Merchant__r.IBAN_uploaded__c</formula>
    <label>I.B.A.N. uploaded</label>
    <type>Checkbox</type>
</CustomField>