force-app/main/default/objects/Onboarding_Process__c/fields/ID_checked__c.field-meta.xml
<CustomField>
    <fullName>ID_checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I.D. Approved</label>
    <type>Checkbox</type>
</CustomField>