force-app/main/default/objects/Onboarding_Process__c/fields/ID_uploaded__c.field-meta.xml
<CustomField>
    <fullName>ID_uploaded__c</fullName>
    <formula>Merchant__r.ID_uploaded__c</formula>
    <label>I.D. uploaded</label>
    <type>Checkbox</type>
</CustomField>