force-app/main/default/objects/Onboarding_Process__c/fields/Is_Buyback__c.field-meta.xml
<CustomField>
    <fullName>Is_Buyback__c</fullName>
    <formula>OR(RecordType.DeveloperName = &apos;U_S_Onboarding_Buyback&apos;,  RecordType.DeveloperName = &apos;E_U_Buyback&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Buyback</label>
    <type>Checkbox</type>
</CustomField>