force-app/main/default/objects/Onboarding_Process__c/fields/Is_Expected_To_End_On__c.field-meta.xml
<CustomField>
    <fullName>Is_Expected_To_End_On__c</fullName>
    <formula>DATEVALUE ( CreatedDate ) + 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Expected To End On</label>
    <type>Date</type>
</CustomField>