force-app/main/default/objects/Onboarding_Process__c/fields/Japan_bank_account_statement__c.field-meta.xml
<CustomField>
    <fullName>Japan_bank_account_statement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Japan bank account statement</label>
    <type>Checkbox</type>
</CustomField>