force-app/main/default/objects/Onboarding_Process__c/fields/Japanese_Tax_Number__c.field-meta.xml
<CustomField>
    <fullName>Japanese_Tax_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Japanese Tax Number</label>
    <type>Checkbox</type>
</CustomField>