force-app/main/default/objects/Onboarding_Process__c/fields/JP_I_D_Approved__c.field-meta.xml
<CustomField>
    <fullName>JP_I_D_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>JP - I.D. Approved</label>
    <type>Checkbox</type>
</CustomField>