force-app/main/default/objects/Onboarding_Process__c/fields/Kanban_Card_Link__c.field-meta.xml
<CustomField>
    <fullName>Kanban_Card_Link__c</fullName>
    <description>This field is used on the Onboarding Kanban to display the Merchant Name as a link to the Onboarding Record.</description>
    <formula>HYPERLINK(&quot;/lightning/r/&quot; &amp; Id &amp; &quot;/view&quot;, Merchant__r.Name, &quot;_blank&quot;)</formula>
    <label>Merchant Onboarding Process</label>
    <type>Text</type>
</CustomField>