force-app/main/default/objects/Onboarding_Process__c/fields/Kanban_Dates__c.field-meta.xml
<CustomField>
    <fullName>Kanban_Dates__c</fullName>
    <formula>TEXT ( Has_Begun_On__c ) &amp; &apos; &gt;&gt; &apos; &amp;  TEXT ( Is_Expected_To_End_On__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kanban Dates</label>
    <type>Text</type>
</CustomField>