force-app/main/default/objects/Onboarding_Process__c/fields/KBIS_checked__c.field-meta.xml
<CustomField>
    <fullName>KBIS_checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>K.B.I.S. Approved</label>
    <type>Checkbox</type>
</CustomField>