force-app/main/default/objects/Onboarding_Process__c/fields/KBIS_uploaded__c.field-meta.xml
<CustomField>
    <fullName>KBIS_uploaded__c</fullName>
    <formula>Merchant__r.KBIS_uploaded__c</formula>
    <label>K.B.I.S. uploaded</label>
    <type>Checkbox</type>
</CustomField>