force-app/main/default/objects/Onboarding_Process__c/fields/KYB_check_Refusal_reason__c.field-meta.xml
<CustomField>
    <fullName>KYB_check_Refusal_reason__c</fullName>
    <label>KYB check - Refusal reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>