force-app/main/default/objects/Onboarding_Process__c/fields/KYCs_Checked__c.field-meta.xml
<CustomField>
    <fullName>KYCs_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KYCs Checked</label>
    <type>Checkbox</type>
</CustomField>