force-app/main/default/objects/Onboarding_Process__c/fields/Listings_and_of_units__c.field-meta.xml
<CustomField>
    <fullName>Listings_and_of_units__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Listings and # of units</label>
    <type>Checkbox</type>
</CustomField>