force-app/main/default/objects/Onboarding_Process__c/fields/Logistic__c.field-meta.xml
<CustomField>
    <fullName>Logistic__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>You need to select at least one situation (F.B.B.M. or Logistic)</inlineHelpText>
    <label>Logistic</label>
    <type>Checkbox</type>
</CustomField>