force-app/main/default/objects/Onboarding_Process__c/fields/Manager_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Manager_for_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Manager of the BizDev that will be used as approver for the onboarding approval process.</description>
    <label>Manager for Approval</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Onboarding_Processes1</relationshipName>
    <type>Lookup</type>
</CustomField>