force-app/main/default/objects/Onboarding_Process__c/fields/Merchant_BizDev__c.field-meta.xml
<CustomField>
    <fullName>Merchant_BizDev__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merchant BizDev</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Onboarding_Processes2</relationshipName>
    <type>Lookup</type>
</CustomField>