force-app/main/default/objects/Onboarding_Process__c/fields/Merchant_Name__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Name__c</fullName>
    <formula>Merchant__r.Name</formula>
    <label>Merchant Name</label>
    <type>Text</type>
</CustomField>