force-app/main/default/objects/Onboarding_Process__c/fields/Merchant_VAT_Compliance_Approved__c.field-meta.xml
<CustomField>
    <fullName>Merchant_VAT_Compliance_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Merchant VAT Compliance Approved</label>
    <type>Checkbox</type>
</CustomField>