force-app/main/default/objects/Onboarding_Process__c/fields/Merchant_VAT_Compliance_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Merchant_VAT_Compliance_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Merchant VAT Compliance Uploaded</label>
    <type>Checkbox</type>
</CustomField>