force-app/main/default/objects/Onboarding_Process__c/fields/Merchants_Targeted_Countries__c.field-meta.xml
<CustomField>
    <fullName>Merchants_Targeted_Countries__c</fullName>
    <label>Merchants Targeted Countries</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>