force-app/main/default/objects/Onboarding_Process__c/fields/My_profile__c.field-meta.xml
<CustomField>
    <fullName>My_profile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>My profile</label>
    <type>Checkbox</type>
</CustomField>