force-app/main/default/objects/Onboarding_Process__c/fields/NextQualitySurveyStatus__c.field-meta.xml
<CustomField>
    <fullName>NextQualitySurveyStatus__c</fullName>
    <label>NextQualitySurveyStatus</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Quality_Survey_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Survey_Status</valueSetName>
    </valueSet>
</CustomField>