force-app/main/default/objects/Onboarding_Process__c/fields/NextStage__c.field-meta.xml
<CustomField>
    <fullName>NextStage__c</fullName>
    <description>Stage dependent picklist used by the Apex class DCE_StepsPathController to grant stage modifications.</description>
    <label>NextStage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Onboarding_Stages</valueSetName>
    </valueSet>
</CustomField>