force-app/main/default/objects/Onboarding_Process__c/fields/Payment_methods__c.field-meta.xml
<CustomField>
    <fullName>Payment_methods__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment methods</label>
    <type>Checkbox</type>
</CustomField>