force-app/main/default/objects/Onboarding_Process__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <formula>TEXT(Merchant__r.Profile__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile</label>
    <type>Text</type>
</CustomField>