force-app/main/default/objects/Onboarding_Process__c/fields/Quality_Charter__c.field-meta.xml
<CustomField>
    <fullName>Quality_Charter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quality Charter</label>
    <type>Checkbox</type>
</CustomField>