force-app/main/default/objects/Onboarding_Process__c/fields/Quality_Completion_rate__c.field-meta.xml
<CustomField>
    <fullName>Quality_Completion_rate__c</fullName>
    <formula>if(ISPICKVAL(Status_Quality_Test__c, &quot;All good&quot;), 100, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quality - Completion rate</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>