force-app/main/default/objects/Onboarding_Process__c/fields/Quality_prerequisites_verified__c.field-meta.xml
<CustomField>
    <fullName>Quality_prerequisites_verified__c</fullName>
    <formula>if( Status_Buyback_Quality_Test_1__c = &quot;Accepted&quot;,True,if( Status_Buyback_Quality_Test_2__c = &quot;Accepted&quot;,True,if( TL_Bypass_Quality_Test__c = True ,True, False)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quality prerequisites verified</label>
    <type>Checkbox</type>
</CustomField>