force-app/main/default/objects/Onboarding_Process__c/fields/Quality_Survey_and_Materials_sent__c.field-meta.xml
<CustomField>
    <fullName>Quality_Survey_and_Materials_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quality Survey and Materials sent</label>
    <type>Checkbox</type>
</CustomField>