force-app/main/default/objects/Onboarding_Process__c/fields/Quality_Survey_Status__c.field-meta.xml
<CustomField>
    <fullName>Quality_Survey_Status__c</fullName>
    <label>Quality Survey Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Survey_Status</valueSetName>
    </valueSet>
</CustomField>