force-app/main/default/objects/Onboarding_Process__c/fields/Registered_Repaired_Number__c.field-meta.xml
<CustomField>
    <fullName>Registered_Repaired_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registered Repaired Number</label>
    <type>Checkbox</type>
</CustomField>