force-app/main/default/objects/Onboarding_Process__c/fields/Resale_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Resale_Certificate__c</fullName>
    <formula>Merchant__r.Resale_Certificate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resale Certificate</label>
    <type>Checkbox</type>
</CustomField>