force-app/main/default/objects/Onboarding_Process__c/fields/Return_Address__c.field-meta.xml
<CustomField>
    <fullName>Return_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return Address</label>
    <type>Checkbox</type>
</CustomField>