force-app/main/default/objects/Onboarding_Process__c/fields/Return_Service__c.field-meta.xml
<CustomField>
    <fullName>Return_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>You need to select at least one situation (Backship, or Own return logistics)</inlineHelpText>
    <label>Backship</label>
    <type>Checkbox</type>
</CustomField>