force-app/main/default/objects/Onboarding_Process__c/fields/Second_hand_business_permet__c.field-meta.xml
<CustomField>
    <fullName>Second_hand_business_permet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Second-hand business permet</label>
    <type>Checkbox</type>
</CustomField>